[gd_scene load_steps=3 format=2]

[ext_resource path="res://Engine/GameObjects/Core/Trigger/Player/WaterSurfaceNoseArea/WaterSurfaceNoseArea.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.03

[node name="WaterSurfaceNoseArea" type="Area" groups=[
"GAME_LISTENER",
"PLAYER_LISTENER",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
monitorable = false
collision_layer = 4096
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_WaterSurfaceArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_WaterSurfaceArea_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
